# Ferro

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  ENV_VARIABLES.md  GRAPHQL_API.md  IMPLEMENTATION.md  README.md  docker-compose.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/comments/: create_comment.rs  dtos.rs  list_comments.rs  mod.rs
crates/application/src/posts/: create_post.rs  dtos.rs  get_post.rs  list_posts.rs  mod.rs
crates/application/src/users/: dtos.rs  login_user.rs  mod.rs  register_user.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/comments/: aggregate.rs  mod.rs  repository.rs  value_objects.rs
crates/domain/src/common/: error.rs  mod.rs  value_objects.rs
crates/domain/src/posts/: aggregate.rs  mod.rs  repository.rs  value_objects.rs
crates/domain/src/users/: aggregate.rs  errors.rs  events.rs  mod.rs  repository.rs  value_objects.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/persistence/: mod.rs  postgres_comment_repository.rs  postgres_post_repository.rs  postgres_user_repository.rs
crates/infrastructure/src/security/: jwt_service.rs  mod.rs  password_hasher.rs
migrations/: 001_create_users_table.sql  002_create_posts_table.sql  003_create_comments_table.sql
services/auth/: Cargo.toml
services/auth/src/: config.rs  main.rs
services/auth/src/adapters/: jwt_adapter.rs  mod.rs  password_adapter.rs
services/auth/src/graphql/: handler.rs  mod.rs  mutations.rs  queries.rs  schema.rs  types.rs
services/auth/src/handlers/: auth_handlers.rs  comment_handlers.rs  common.rs  error_response.rs  mod.rs  post_handlers.rs
services/auth/src/middleware/: auth_middleware.rs  mod.rs
services/comment/: Cargo.toml
services/comment/src/: config.rs  main.rs
services/comment/src/adapters/: jwt_adapter.rs  mod.rs
services/comment/src/handlers/: comment_handlers.rs  common.rs  error_response.rs  mod.rs
services/comment/src/middleware/: auth_middleware.rs  mod.rs
services/post/: Cargo.toml
services/post/src/: config.rs  main.rs
services/post/src/adapters/: jwt_adapter.rs  mod.rs
services/post/src/handlers/: common.rs  error_response.rs  mod.rs  post_handlers.rs
services/post/src/middleware/: auth_middleware.rs  mod.rs
