[workspace]
resolver = "2"

# Define all the crates that are part of this workspace.
members = [
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "services/auth",
]

# Dependency versions shared across the workspace.
[workspace.dependencies]
# Asynchronous Runtime
tokio = { version = "1", features = ["full"] }

# Serialization Deserialization with Serde (JSON etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling (for libraries vs applications)
thiserror = "1.0" # For libraries (domain, infra)
anyhow = "1.0"    # For services (applications)

# Web Framework
axum = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }     # Date and time handling
uuid = { version = "1.8", features = ["v4", "serde"] } # ID generation
tracing = "0.1"                                        # Logging interface
tracing-subscriber = "0.3"                             # Logging implementation
async-trait = "0.1"                                    # Needed to use async functions in traits
