[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Password Hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }
